--- a/k8s/base/deployments/django.yaml
+++ b/k8s/base/deployments/django.yaml
@@ -74,6 +74,7 @@ spec:
         - -c
         - |
           python manage.py migrate &&
+          python manage.py collectstatic --noinput &&
           python manage.py runserver 0.0.0.0:8000
       initContainers:
       - name: wait-for-db
